// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Plan, create, configure, and review production-ready Azure Kubernetes Service (AKS) clusters. Covers Day-0 checklist, SKU selection (Automatic vs Standard), networking options (private API server, Azure CNI Overlay, egress configuration), security, and operations (autoscaling, upgrade strategy, cost analysis) and Day-2 review and audit. WHEN: create AKS environment, provision AKS environment, enable AKS observability, design AKS networking, choose AKS SKU, secure AKS, optimize AKS, rightsize AKS pod, AKS spot nodes, AKS cluster-autoscaler, review AKS, audit AKS, AKS practice review, AKS checklist, AKS remediation.",
  "extractedKeywords": [
    "aks",
    "analysis",
    "audit",
    "automatic",
    "autoscaling",
    "azure",
    "checklist",
    "choose",
    "cli",
    "cluster-autoscaler",
    "clusters",
    "configuration",
    "configure",
    "container",
    "cost",
    "covers",
    "create",
    "day-0",
    "day-2",
    "deploy",
    "design",
    "diagnostic",
    "egress",
    "enable",
    "entra",
    "environment",
    "function",
    "identity",
    "key vault",
    "kubernetes",
    "mcp",
    "monitor",
    "networking",
    "nodes",
    "observability",
    "operations",
    "optimize",
    "options",
    "overlay",
    "plan",
    "practice",
    "private",
    "production-ready",
    "provision",
    "remediation",
    "review",
    "rightsize",
    "secure",
    "security",
    "selection",
    "server",
    "service",
    "spot",
    "standard",
    "strategy",
    "upgrade",
    "vnet",
    "when",
  ],
  "name": "azure-kubernetes",
}
`;

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "analysis",
  "audit",
  "automatic",
  "autoscaling",
  "azure",
  "checklist",
  "choose",
  "cli",
  "cluster-autoscaler",
  "clusters",
  "configuration",
  "configure",
  "container",
  "cost",
  "covers",
  "create",
  "day-0",
  "day-2",
  "deploy",
  "design",
  "diagnostic",
  "egress",
  "enable",
  "entra",
  "environment",
  "function",
  "identity",
  "key vault",
  "kubernetes",
  "mcp",
  "monitor",
  "networking",
  "nodes",
  "observability",
  "operations",
  "optimize",
  "options",
  "overlay",
  "plan",
  "practice",
  "private",
  "production-ready",
  "provision",
  "remediation",
  "review",
  "rightsize",
  "secure",
  "security",
  "selection",
  "server",
  "service",
  "spot",
  "standard",
  "strategy",
  "upgrade",
  "vnet",
  "when",
]
`;
